@@ -1,4 +1,7 @@
 2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
+	* common-src/match.c: static substitution tables for match_word()
+
+2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
 	* common-src/match.c: match_word(): push down nglob variable, rename it
 	  to glob_copy
 
